# sentinel-airflow-spark

./: Dockerfile  build.sh  export-parquet.py  helpers.py  pyproject.toml  run.sh  schema.yaml  spark-defaults.conf
